--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -78,16 +78,14 @@ r.DynamicGlobalIlluminationMethod=1
 r.Mobile.EnableNoPrecomputedLightingCSMShader=1
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=true
-
 r.SkinCache.CompileShaders=True
-
 r.RayTracing=True
-
 r.Shadow.Virtual.Enable=1
-
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
+r.GPUSkin.Support16BitBoneIndex=True
+r.GPUSkin.UnlimitedBoneInfluences=True
+SkeletalMesh.UseExperimentalChunking=1
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
